# marvin-interpolate

./: .travis.yml  README.md  marvin-interpolate.cabal  stack.yaml
src/: Util.hs
src/Marvin/: Interpolate.hs
src/Marvin/Interpolate/: All.hs  String.hs  Text.hs
src/Marvin/Interpolate/Text/: Lazy.hs
test/: Spec.hs
