name:                marvin-interpolate
version:             0.0.1
synopsis:            Compile time String interpolation
description:         Please see README.md
homepage:            https://marvin.readthedocs.io
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Marvin.Interpolate
                     , Marvin.Interpolate.Text
                     , Marvin.Interpolate.Text.Lazy
  other-modules:       Util
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , template-haskell
                     , haskell-src-meta
                     , text
                     , mtl
  default-language:    Haskell2010

test-suite marvin-interpolate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , marvin-interpolate
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JustusAdam/marvin-interpolate
